upgrade api docs to OAS 3.0, add live server, fix some bugs
