# routes/subscription.js
@@ -8,7 +8,7 @@ router.get('/', function (req, res, next) {
 
 router.post('/create', subscriptionHandler.handlePushNotificationSubscription);
 router.get('/notify/:id', subscriptionHandler.sendPushNotification);
-router.get('/notify-all', subscriptionHandler.sendPushNotificationToAll);
+router.post('/notify-all', subscriptionHandler.sendPushNotificationToAll);
 router.get('/list', subscriptionHandler.listSubscription);
 router.get('/check/:id', subscriptionHandler.isExistedSubscriptionId);
 module.exports = router;
